--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <!--this is a comment-->
+  <head> 
+     <title> My site title</title>
+     <link rel="stylesheet" type="text/css" href="style.css"/>
+  </head>
+    <body>
+
+    </body>
+</html>
