--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--this is a comment-->
+  <!--html structure lab-->
   <head> 
-     <title> My site title</title>
-     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta charset="utf-8"/>
+     <title> My Site Title</title>
+     <link rel="stylesheet" type="text/css" href="style.css" />
+
   </head>
     <body>
 
